--- a/Demo/Views/Shared/_Layout.cshtml
+++ b/Demo/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Price" asp-action="Index">Price</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Basket" asp-action="Index">Basket</a>
+                        </li>
                     </ul>
                 </div>
             </div>
